--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Rivo is a personal portfolio HTML template with clean and elegant design">
+    <meta name="description" content="Portafolio personal chdesing">
     <meta name="keywords" content="dark, html, one page, bootstrap,design, creative, onepage, clean, modern,blog,business,parallax">
     <title>Cristian Hualta</title>
     <!--css styles-->
